# serenitycode.dev

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CNAME  README.md  go.mod  go.sum  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yml  devcontainer.yml  pages.yml  update-theme.yml
assets/scss/: custom.scss
config/_default/: config.toml  config.yaml  languages.yaml  markup.yaml  menu.toml  menu.yaml  module.yaml  params.yaml  permalinks.yaml
content/categories/conference/: _index.md
content/categories/embedded/: _index.md
content/categories/fpga/: _index.md
content/categories/general/: _index.md
content/categories/history/: _index.md
content/categories/nixos/: _index.md
content/categories/riscv/: _index.md
content/categories/sysops/: _index.md
content/page/about/: index.md
content/page/archives/: index.md
content/page/search/: index.md
content/post/2019/09/quartus-sv-gotchas/: index.md
content/post/2022/08/hello-world/: index.md
content/post/2023/09/discovering-nixos/: index.md
content/post/2024/06/riscv-summit-europe/: index.md
content/post/2024/09/orconf/: index.md
content/post/2024/10/samsung-research-blog/: index.md
layouts/partials/article/components/: header.html
layouts/partials/head/: custom.html
layouts/partials/sidebar/: left.html
resources/_gen/assets/scss/: style.scss_511aa33e99371f93fbf403479ebfd32e.content  style.scss_511aa33e99371f93fbf403479ebfd32e.json  style.scss_77b10c8e87ff110a62c52933fe3f7f11.content  style.scss_77b10c8e87ff110a62c52933fe3f7f11.json
(+3 files in other folders)
