[tool.poetry]
name = "serenitycode.dev"
version = "0.1.0"
description = "Marek Pikuła – a personal blog"
authors = ["Marek Pikuła <marek@pikula.co>"]
license = "CC BY-SA 4.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
